package baiTap.btJ5;

public interface IQLDS {
    void them(CaNhan p);
    void xoa(String ten);
    void inDS();
}
